--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ cover.out
 .idea/
 
 # Generated files
-apis/
+apis/artifactory/
+apis/zz_register.go
 config/provider-metadata.yaml
 config/schema.json
 package/crds/
