--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ apis/zz_register.go
 config/provider-metadata.yaml
 config/schema.json
 package/crds/
-internal/controller/
+internal/controller/*
+!internal/controller/.gitkeep
