--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ config/provider-metadata.yaml
 config/schema.json
 package/crds/
 internal/controller/*
-!internal/controller/.gitkeep
+!internal/controller/providerconfig/
