Remove apis/ from .gitignore to be able to lint code in GH Actions

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ cover.out
 .idea/
 
 # Generated files
-apis/artifactory/
-apis/zz_register.go
+# apis/artifactory/
+# apis/zz_register.go
 config/provider-metadata.yaml
 config/schema.json
 package/crds/
