--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ cover.out
 # Generated files
 # apis/artifactory/
 # apis/zz_register.go
-config/provider-metadata.yaml
-config/schema.json
+# config/provider-metadata.yaml
+# config/schema.json
 package/crds/
 # internal/controller/*
 # !internal/controller/providerconfig/
