--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,6 @@ cover.out
 # apis/zz_register.go
 # config/provider-metadata.yaml
 # config/schema.json
-package/crds/
+# package/crds/
 # internal/controller/*
 # !internal/controller/providerconfig/
