--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,12 +1,18 @@
+# All available options with their default values:
+#   https://golangci-lint.run/usage/configuration/#run-configuration
 run:
-  deadline: 10m
+  timeout: 10m
 
-  skip-files:
-  - "zz_\\..+\\.go$"
+  # jsonschema: "run" does not validate with "/properties/run/additionalProperties": additional properties 'deadline', 'exclude-files' not allowed
+  # exclude-files:
+  # - "zz_\\..+\\.go$"
 
+# All available options with their default values:
+#   https://golangci-lint.run/usage/configuration/#output-configuration
 output:
-  # colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
-  format: colored-line-number
+  formats:
+    # colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
+    - format: colored-line-number
 
 linters-settings:
   errcheck:
@@ -17,19 +23,6 @@ linters-settings:
     # report about assignment of errors to blank identifier: `num, _ := strconv.Atoi(numStr)`;
     # default is false: such cases aren't reported by default.
     check-blank: false
-
-    # [deprecated] comma-separated list of pairs of the form pkg:regex
-    # the regex is used to ignore names within pkg. (default "fmt:.*").
-    # see https://github.com/kisielk/errcheck#the-deprecated-method for details
-    ignore: fmt:.*,io/ioutil:^Read.*
-
-  govet:
-    # report about shadowed variables
-    check-shadowing: false
-
-  golint:
-    # minimal confidence for issues, default is 0.8
-    min-confidence: 0.8
 
   gofmt:
     # simplify code: gofmt with `-s` option, true by default
@@ -44,10 +37,6 @@ linters-settings:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
     min-complexity: 10
 
-  maligned:
-    # print struct with more effective memory layout or not, false by default
-    suggest-new: true
-
   dupl:
     # tokens count to trigger issue, 150 by default
     threshold: 100
@@ -61,13 +50,6 @@ linters-settings:
   lll:
     # tab width in spaces. Default to 1.
     tab-width: 1
-
-  unused:
-    # treat code as a program (not a library) and report unused exported identifiers; default is false.
-    # XXX: if you enable this setting, unused will report a lot of false-positives in text editors:
-    # if it's called for subdir of a project it can't find funcs usages. All text editor integrations
-    # with golangci-lint call it on a directory with the changed file.
-    check-exported: false
 
   unparam:
     # Inspect exported functions, default is false. Set to true if no external program/library imports your code.
@@ -104,16 +86,16 @@ linters-settings:
 
 linters:
   enable:
-    - megacheck
+    # - megacheck # The linter named "megacheck" is deprecated. It has been split into: gosimple, staticcheck, unused.
     - govet
     - gocyclo
     - gocritic
-    - interfacer
+    # - interfacer # The linter 'interfacer' is deprecated (since v1.38.0) due to: The repository of the linter has been archived by the owner.
     - goconst
     - goimports
     - gofmt  # We enable this as well as goimports for its simplify mode.
     - prealloc
-    - golint
+    # - golint
     - unconvert
     - misspell
     - nakedret
@@ -136,7 +118,7 @@ issues:
         - gosec
         - scopelint
         - unparam
-    
+
     # Ease some gocritic warnings on test files.
     - path: _test\.go
       text: "(unnamedResult|exitAfterDefer)"
@@ -189,7 +171,7 @@ issues:
   new: false
 
   # Maximum issues count per one linter. Set to 0 to disable. Default is 50.
-  max-per-linter: 0
+  max-issues-per-linter: 0
 
   # Maximum count of issues with the same text. Set to 0 to disable. Default is 3.
   max-same-issues: 0
