--- a/examples/providerconfig/providerconfig.yaml
+++ b/examples/providerconfig/providerconfig.yaml
@@ -1,4 +1,4 @@
-apiVersion: artifactory.upbound.io/v1beta1
+apiVersion: artifactory.jfrog.crossplane.io/v1beta1
 kind: ProviderConfig
 metadata:
   name: default
@@ -6,6 +6,6 @@ spec:
   credentials:
     source: Secret
     secretRef:
-      name: example-creds
+      name: artifactory-creds
       namespace: crossplane-system
       key: credentials
