Switch to Avarei/build submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "build"]
 	path = build
-	url = https://github.com/crossplane/build
+	# TODO: PR fixes issue with authorization to Upbound
+	#   https://github.com/crossplane/build/pull/14
+	# Switch back to original once PR is merged
+	#url = https://github.com/crossplane/build
+	url = https://github.com/Avarei/build
