Use feat/xpkg-with-crossplane-cli for build submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,4 @@
 	# Switch back to original once PR is merged
 	#url = https://github.com/crossplane/build
 	url = https://github.com/Avarei/build
+	branch = feat/xpkg-with-crossplane-cli
