Change provider name to provider-jfrog-artifactory

--- a/examples/install.yaml
+++ b/examples/install.yaml
@@ -1,6 +1,6 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: provider-artifactory
+  name: provider-jfrog-artifactory
 spec:
-  package: hmlkao/provider-artifactory:v0.1.0
+  package: hmlkao/provider-jfrog-artifactory:v0.2.0
