--- a/.github/workflows/bump_versions.yaml
+++ b/.github/workflows/bump_versions.yaml
@@ -51,6 +51,46 @@ jobs:
           #   https://github.com/peter-evans/create-pull-request/tree/v7/?tab=readme-ov-file#token
           token: ${{ secrets.BUMP_VERSION_TOKEN }}
 
+  bump-crossplane-version:
+    name: Bump Crossplane version
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+
+      - name: Get current version
+        id: current-version
+        run: |
+          current_version=$(grep '^CROSSPLANE_VERSION = ' < Makefile | cut -d' ' -f3)
+          echo "CROSSPLANE_VERSION_CURRENT=${current_version}" >> $GITHUB_OUTPUT
+
+      - name: Get new version
+        id: new-version
+        run: |
+          new_version=$(curl -sSL https://api.github.com/repos/crossplane/crossplane/releases/latest | jq -r '.tag_name' | tr -d 'v')
+          echo "CROSSPLANE_VERSION_NEW=${new_version}" >> $GITHUB_OUTPUT
+
+      - name: Bump version
+        if: ${{ steps.current-version.outputs.CROSSPLANE_VERSION_CURRENT != steps.new-version.outputs.CROSSPLANE_VERSION_NEW }}
+        run: hack/bump_crossplane_version.sh "${{steps.current-version.outputs.CROSSPLANE_VERSION_CURRENT}}" "${{steps.new-version.outputs.CROSSPLANE_VERSION_NEW}}"
+
+      - name: Create PR
+        # Previous step must be successful
+        #   https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/evaluate-expressions-in-workflows-and-actions#success
+        # The success() function evaluates to true even if the previous step was skipped, so we must check the same condition anyway
+        if: ${{ steps.current-version.outputs.CROSSPLANE_VERSION_CURRENT != steps.new-version.outputs.CROSSPLANE_VERSION_NEW && success() }}
+        uses: peter-evans/create-pull-request@v7
+        with:
+          title: Bump Crossplane to v${{steps.new-version.outputs.CROSSPLANE_VERSION_NEW}}
+          commit-message: Bump Crossplane version to v${{steps.new-version.outputs.CROSSPLANE_VERSION_NEW}}
+          branch: bump-version/crossplane
+          labels: bump-version, crossplane
+          # Cannot use GITHUB_TOKEN, because other workflows are not triggered with it, PAT must be used
+          #   https://github.com/peter-evans/create-pull-request/tree/v7/?tab=readme-ov-file#token
+          token: ${{ secrets.BUMP_VERSION_TOKEN }}
+
   #bump-go-version:
   #bump-up-version:
   #bump-kind-version:
