--- a/.github/workflows/bump_versions.yaml
+++ b/.github/workflows/bump_versions.yaml
@@ -47,13 +47,14 @@ jobs:
         run: scripts/bump_tfm_provider_version.sh "${{steps.current-version.outputs.TFM_PROVIDER_VERSION_CURRENT}}" "${{steps.latest-version.outputs.TFM_PROVIDER_VERSION_LATEST}}"
 
       #####
-      # Generate files
-      #####
+      # Generate files for new version as we want them as part of PR
       - name: Setup Go
         if: ${{ steps.current-version.outputs.TFM_PROVIDER_VERSION_CURRENT != steps.latest-version.outputs.TFM_PROVIDER_VERSION_LATEST }}
         uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
+      - name: Install goimports
+        run: go install golang.org/x/tools/cmd/goimports
       - name: Initialize generate
         if: ${{ steps.current-version.outputs.TFM_PROVIDER_VERSION_CURRENT != steps.latest-version.outputs.TFM_PROVIDER_VERSION_LATEST }}
         run: make generate.init
@@ -63,8 +64,6 @@ jobs:
       - name: Generate files
         if: ${{ steps.current-version.outputs.TFM_PROVIDER_VERSION_CURRENT != steps.latest-version.outputs.TFM_PROVIDER_VERSION_LATEST }}
         run: make generate
-      #####
-      # Generate files (end)
       #####
 
       - name: Create PR
