--- a/package/crds/artifactory.jfrog.crossplane.io_anonymoususers.yaml
+++ b/package/crds/artifactory.jfrog.crossplane.io_anonymoususers.yaml
@@ -34,7 +34,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: AnonymousUser is the Schema for the AnonymousUsers API.
+        description: AnonymousUser is the Schema for the AnonymousUsers API. ""
         properties:
           apiVersion:
             description: |-
